EPBDS-15767 Fix JdkObsolete warnings
Replace URLEncoder.encode(String,String) and URLDecoder.decode(String,String)
with Charset overloads. Replace LinkedList with ArrayList for List usage
and ArrayDeque for Queue usage.